<resources>
    <string name="app_name">BinaMurid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_parent">NavigationParentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_home">Home</string>
    <string name="title_daily_report">Daily Report</string>
    <string name="tittle_history">History</string>
    <string name="profile">Profile</string>

    <string name="landing_1">Lewati</string>
    <string name="landing_2">Membantu Memantau \n Anak Anda</string>
    <string name="landing_3">Binamurid membantu anda dalam memantau bidang akademik maupun non akademik anak kamu</string>
    <string name="btn_landing">Selanjutnya</string>
    <string name="image_landing">image</string>

    <string name="landing_5">Mulai percakapan mudah dengan Pedagogue</string>
    <string name="landing_6">Mulai percakapan dan menanyakan anak melalui Pedagogue dengan mudah</string>
    <string name="example_desc">Skill anak dalam memahami materi sudah baik dan lancar. Akan tetapi dia hanya kurang fokus.</string>
    <string name="title_activity_activiy_from_child_fragment">ActiviyFromChildFragment</string>
    <string name="title_activity_form_child">FormChildActivity</string>

    <string name="email_address">Email Address</string>

    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <string name="full_name">Full Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="school">School</string>
    <string name="date_birth">Date of Birth</string>
</resources>