<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.qatros.qtn_bina_murid.ui.parent.home.HomeParentFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_parent" >
    </fragment>

    <fragment
        android:id="@+id/navigation_daily_report"
        android:name="com.qatros.qtn_bina_murid.ui.pedagogue.daily.DailyPedagogueFragment"
        android:label="@string/title_daily_report"
        tools:layout="@layout/fragment_daily_pedagogue" >
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.qatros.qtn_bina_murid.ui.pedagogue.history.HistoryPedagogueFragment"
        android:label="@string/tittle_history"
        tools:layout="@layout/fragment_history_pedagogue" >
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.qatros.qtn_bina_murid.ui.pedagogue.profile.ProfilePedagogueFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile_pedagogue" >
    </fragment>

</navigation>